# vc-agents

./: .env.example  .gitignore  .railwayignore  Makefile  README.md  README_RETOOL.md  docker-compose.retool.yml  pyproject.toml  railway-admin.toml  railway.toml  requirements.txt
agents/: deals_ingestor.md  social_enricher.md  vc_crowler.md  vc_website_finder.md
db/: schema.sql
docs/: ADMIN_DASHBOARD.md  ADMIN_DEPLOYMENT.md  CONTEXT.md  DATABASE_ANALYSIS.md  RAILWAY_DEPLOYMENT.md  RETOOL_API.md  RETOOL_SETUP.md  RETOOL_TRIGGERS.md  SCHEMA_SUMMARY.md  SETUP.md  SUPABASE_QUICK_START.md  SUPABASE_SETUP.md  VC_CRAWLER_AGENT.md  WORKFLOW_TRACKING.md
prompts/: intro_prompt.md  system.md
scripts/: add_test_vcs.py  check_workflow_status.py  load_defillama_deals.py  test_supabase_connection.py  verify_setup.py
src/: config.py
src/admin/: __init__.py  app.py
src/agents/: deals_ingestor.py  example_command.py  social_enricher.py  vc_crawler.py  vc_website_finder.py
src/api/: __init__.py  main.py
src/clients/: __init__.py  defillama.py
src/db/: __init__.py  connection.py  init_db.py  models.py
src/utils/: helpers.py
